# siem_saltbuild

./: .gitignore  Cargo.toml  README.md  config.toml
docs/: architecture.md  architecture_overview.txt
src/: cli.rs  config.rs  db.rs  file_based_ingestion.rs  log_ingestion.rs  log_parser.rs  main.rs  syslog_ingestion.rs
