[package]
name = "siem_saltbuild"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
regex = "1"
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
config = "0.14"